(dc) DatagramChannel.disconnect fails with "Invalid argument" on macOS 12.4

XMLWordPrintable

        The following 5 tests failed in the JDK19 CI:

        java/nio/channels/DatagramChannel/SelectWhenRefused.java
        java/nio/channels/DatagramChannel/Disconnect.java
        java/nio/channels/DatagramChannel/ChangingAddress.java
        java/nio/channels/DatagramChannel/AfterDisconnect.java
        java/nio/channels/DatagramChannel/AdaptorGetters.java

        Here's a log file snippet for the SelectWhenRefused.java test:

        ----------System.err:(12/680)----------
        java.net.SocketException: Invalid argument
        at java.base/sun.nio.ch.DatagramChannelImpl.disconnect0(Native Method)
        at java.base/sun.nio.ch.DatagramChannelImpl.disconnect(DatagramChannelImpl.java:1300)
        at SelectWhenRefused.main(SelectWhenRefused.java:78)
        at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
        at java.base/java.lang.reflect.Method.invoke(Method.java:578)
        at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:312)
        at java.base/java.lang.Thread.run(Thread.java:828)

        JavaTest Message: Test threw exception: java.net.SocketException
        JavaTest Message: shutting down test

        result: Failed. Execution failed: `main' threw exception: java.net.SocketException: Invalid argument

        The other 4 tests have similar failures.

        The test machine is running Mac_OS_X_12.4 and we've been
        seeing some strange failures on Mac_OS_X_12.4 in the last
        few days.

              Assignee:
              Jaikiran Pai
              Reporter:
              Daniel Daugherty
              Votes:
              0 Vote for this issue
              Watchers:
              23 Start watching this issue

                Created:
                Updated:
                Resolved: