8285515: (dc) DatagramChannel.disconnect fails with "Invalid argument" on macOS 12.4

Reviewed-by: clanger
Backport-of: 269eae61894b6bd0a7512045a369b53df747f6e5